Fix images on iphone 8 (#1055)

--- a/decidim-initiatives/app/assets/stylesheet/decidim/initiatives/initiatives.scss
+++ b/decidim-initiatives/app/assets/stylesheet/decidim/initiatives/initiatives.scss
@@ -75,7 +75,8 @@
     justify-content: center;
 
     img{
-      max-width: 75%
+      max-width: 75%;
+      align-self: flex-start;
     }
   }
 }
